# foil

./: Cargo.toml  LICENSE
data/: test_file.txt
src/: app.rs  event.rs  handler.rs  main.rs  ui.rs
src/utils/: buffer_storage.rs  cursor.rs  file_helper.rs  input_buffer.rs  mod.rs  motion_handler.rs  render_utils.rs  system.rs  undo_stack.rs  yank_buffer.rs
