[package]
name = "foil"
version = "0.1.0"
authors = ["iicsx <maxinies00@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
regex = "1.11.1"
tokio = { version = "1.40.0", features = ["full"] }
